remove unnecessary html
Co-authored-by: Randel Moore <randel.c.moore@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <button class="btn-success" id="button-id-placeholder">
       Button Text
     </button>
-    <div class="text-one"><img id="img1" src="url" alt="img1"></div>
+    <div class="text-one"></div>
     <div class="text-two"></div>
     <div class="text-three"></div>
     
